# nest

./: .env.example  .gitignore  CHANGELOG.md  README.md  launch_nest.py  markdown_handler.py  pyproject.toml  requirements.txt  test_paths.py
nest/: config.json.backup  last_login.json  main.py
nest/ai/: __init__.py  api_client.py  api_client_backup.py  api_client_fixed.py  intelligent_analysis.py  nestbot.py  ticket_utils.py
nest/api/: api_client.py  auth.py  google_calendar.py
nest/config/: .key
nest/knowledge/: electronics.json  user_context.json  user_context.py  user_context_general.json
nest/security/: access_security.json  security.salt
nest/ui/: android_tools.py  appointments.py  customers.py  dashboard.py  inventory.py  ios_tools.py  login.py  main.py  mobile_tools.py  notifications.py  pc_tools.py  pc_tools_new.py  reports.py  styles.py  technicians.py  ticket_modal.py  tickets.py  widgets.py
nest/ui/tabs/: diagnostics_tab.py
nest/ui/theme/: __init__.py  styles.py
nest/utils/: access_security.py  api_client.py  avatar_util.py  cache_utils.py  config.py  config_manager.py  config_util.py  diagnostics_util.py  feature_detection.py  font_manager.py  linux_diagnostics.py  logger.py  normalize.py  pc_diagnostics.py  pc_tools_core.py  pin_encryption.py  pin_secure_cache.py  platform_paths.py  repairdesk_api.py  secure_cache.py  session_manager.py  snapshot_logger.py  system_info.py  system_utils.py  ticket_context.py  ui_threading.py
nest/utils/diagnostics/: storage_health.py
nest/utils/manufacturer_apis/: api_asus.py
nest/utils/utils/: auth.py  (+4 more)
(+14 files in other folders)
